--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,14 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="in.co.powerusers.vegfesta.HomeActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/action_cart"
         android:orderInCategory="100"
         android:title="@string/action_cart"
         android:icon="@drawable/ic_menu_cart"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_signin"
+        android:orderInCategory="100"
+        android:title="@string/action_signin"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_orders"
+        android:orderInCategory="100"
+        android:title="@string/action_orders"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="@string/action_logout"
+        app:showAsAction="never" />
 </menu>
