--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="@color/light_gray"
     tools:context="in.co.powerusers.vegfesta.OrderActivity">
 
     <LinearLayout
@@ -23,9 +23,9 @@
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Order No" />
+            android:text="Order No"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textView18"
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Quantity"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textView20"
@@ -42,7 +43,8 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:text="Amount"
-            android:textAlignment="textEnd" />
+            android:textAlignment="textEnd"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
