--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:drawable="@android:color/white" />
+<item android:drawable="@color/home_background" />
 <item>
 <bitmap
     android:gravity="center"
-    android:src="@mipmap/vflogofull" />
+    android:src="@mipmap/vfhome" />
 </item>
 </layer-list>
